change css path

--- a/layout/partials/meta.html
+++ b/layout/partials/meta.html
@@ -6,7 +6,8 @@
   <title>{{ .Title }} - {{ .Site.Title }}</title>
 {{ end }}
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
-<link rel="stylesheet" href="{{ .Site.BaseURL }}/css/app.css">
+<!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/app.css"> -->
+<link rel="stylesheet" href="/css/app.css">
 <link rel="alternate" href="{{ .Site.BaseURL }}/index.xml" title="hugo-boilerplate-podcast" type="application/rss+xml">
 
 <meta name="author" content="@1000ch">
