--- a/layout/partials/footer.html
+++ b/layout/partials/footer.html
@@ -1,15 +1,15 @@
 <footer class="Footer">
   <div class="Footer__Item">
-    <h2>1000ch</h2>
-    <p>Software Engineer specialing in Web Technology.</p>
-    <a href="https://twitter.com/1000ch" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @1000ch</a>
+    <h2>Java Dev Podcast</h2>
+    <p>Podcast about Java and JVM</p>
+    <a href="https://twitter.com/volyx" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @volyx</a>
   </div>
   <div class="Footer__Item">
     <h2>Subscribe</h2>
     <ul>
-      <li><a href="{{ .Site.Params.itunes }}" target="_blank">iTunesで購読する</a></li>
-      <li><a href="{{ .Site.Params.android }}" target="_blank">Androidで購読する</a></li>
-      <li><a href="{{ .Site.Params.feed }}" target="_blank">RSSで購読する</a></li>
+      <li><a href="{{ .Site.Params.itunes }}" target="_blank">iTunes</a></li>
+      <li><a href="{{ .Site.Params.android }}" target="_blank">Android</a></li>
+      <li><a href="{{ .Site.Params.feed }}" target="_blank">RSS</a></li>
     </ul>
   </div>
 </footer>
