--- a/layout/partials/meta.html
+++ b/layout/partials/meta.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/app.css">
 <link rel="alternate" href="{{ .Site.BaseURL }}/index.xml" title="hugo-boilerplate-podcast" type="application/rss+xml">
 
-<meta name="author" content="@1000ch">
+<meta name="author" content="@volyx">
 <meta name="copyright" content="Copyright (c) Shogo Sensui; Licensed under Creative Commons Attribution-Noncommercial-Share Japan">
 
 {{ if .Params.description }}
