--- a/layout/partials/footer.html
+++ b/layout/partials/footer.html
@@ -1,11 +1,11 @@
 <footer class="Footer">
   <div class="Footer__Item">
-    <h2>Java Dev Podcast</h2>
-    <p>Podcast about Java and JVM</p>
+    <h2>Окно во двор</h2>
+    <p>Подкаст о кино, в котором ничего не понятно</p>
     <a href="https://twitter.com/volyx" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @volyx</a>
   </div>
   <div class="Footer__Item">
-    <h2>Subscribe</h2>
+    <h2>Подписка</h2>
     <ul>
       <li><a href="{{ .Site.Params.itunes }}" target="_blank">iTunes</a></li>
       <li><a href="{{ .Site.Params.android }}" target="_blank">Android</a></li>
